apps/openstack/gateway-api/routes/custom-cinder-gateway-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: custom-cinder-gateway-route
  namespace: openstack
  labels:
    application: gateway-api
    service: HTTPRoute
    route: cinder
spec:
  parentRefs:
  - name: flex-gateway
    sectionName: cinder-https
    namespace: nginx-gateway
  hostnames:
  - "cinder.your.domain.tld"
  rules:
    - backendRefs:
      - name: cinder-api
        port: 8776
