apps/openstack/gateway-api/routes/custom-grafana-routes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-gateway-route
  namespace: grafana
spec:
  hostnames:
  - grafana.your.domain.tld
  - "grafana.cluster.local"
  - "grafana"
  - "grafana.grafana"
  - "grafana.grafana.svc.cluster.local"
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: flex-gateway
    namespace: nginx-gateway
    sectionName: grafana-https
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: grafana
      port: 80
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
