apps/openstack/gateway-api/routes/custom-octavia-gateway-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: custom-octavia-gateway-route
  namespace: openstack
  labels:
    application: gateway-api
    service: HTTPRoute
    route: octavia
spec:
  parentRefs:
  - name: flex-gateway
    sectionName: octavia-https
    namespace: nginx-gateway
  hostnames:
  - "octavia.your.domain.tld"
  rules:
    - backendRefs:
      - name: octavia-api
        port: 9876
